@@ -22,6 +22,11 @@ BEGIN {
         print "1..0 # Skip: no working threads\n";
         exit 0;
     }
+    
+    unless ( $ENV{AUTHOR_TESTING} ) {
+        print "1..0 # Skip: many perls have broken threads\n";
+        exit 0;
+    }
 }
 use Test::More;
 
